[project]
name = "yt-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "aman.kadam-coditas",email = "aman.kadam@coditas.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi (>=0.125.0,<0.126.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "openai (>=2.13.0,<3.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "youtube-transcript-api (>=1.2.3,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "youtube-dl (>=2021.12.17,<2022.0.0)",
    "numpy (==2.2.6)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "yt-dlp (>=2025.12.8,<2026.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "pytube (>=15.0.0,<16.0.0)",
    "pytubefix (>=10.3.6,<11.0.0)"
]

[tool.poetry]
packages = [{include = "yt_rag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
